style.css
h2 {
    margin-right: 5%;
    margin-left: 5%;
}

p {
    margin-right: 5%;
    margin-left: 5%;
}

head {
    margin: 0px;
    padding-left: 5%;
    padding-right: 5%;
}

body {
    margin: 0px;
    padding-left: 10%;
    padding-right: 10%;
}

._901-914 {
    margin: 0;
}

pre {
    margin-right: 5%;
    margin-left: 5%;
    text-wrap: initial;
}

.alt {
    margin-right: 5%;
    margin-left: 5%;
    font-family: inherit;
    font-size: inherit;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* overlay styling */
#overlay {
    position: fixed;
    display: none;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.7); /* Black BG with 40% opacity */
    z-index: 1;
    cursor: default;
    backdrop-filter: blur(5px);
}

#notes {
    position: fixed;
    display: none;
    bottom: 50%;
    left: 48%;
    right: 5%;
    transform: translate(0%, +50%);
    z-index: 2;
    justify-content: left;
    align-items: left;
}

#selected_img {
    position: fixed;
    display: none;
    width: 40%;
    height: 80%;
    top: 50%;
    left: 5%;
    transform: translate(0%, -50%);
    z-index: 3;
    justify-content: center;
    align-items: center;
}

.pic_note {
    color: white;
    font-family: inherit;
    font-size: inherit;
    white-space: pre-line;
    line-height: 110%;
    max-width: 100%;
    margin-left: 0;
    text-align: justify;
}

h2.pic_note {
    font-size: 32px;
}

h4.pic_note {
    font-size: 18px;
}

.highlight {
    background-color: white;
    z-index: 999;
    font-size: inherit;
    font-family: inherit;
}

#delete_me {
    max-width: 100%;
    max-height: 100%;
    display: inline;
    float: none;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* Styling the slideshow */
.inner_slide {
    max-width: 100%;
    max-height: 100%;
    display: inline;
    float: none;
}

.slide {
    display: none; /* Hiding by default */
    justify-content: center;
}

.prev_slide, .next_slide {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    padding: 16px;
    color: #d0d0d0;
    font-weight: bold;
    font-size: large;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    background-color: rgba(0,0,0,0.4);
    user-select: none;
    z-index: 999;
}

.prev_slide {
    left: 0;
}

.next_slide {
    right: 0;
    border-radius: 3px 0 0 3px;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

/* page selection form */
#page_selector {
    display: block;
    text-align: center;
}

/* navigation buttons at bottom of DBUBOTW2 pages */
#nav_btn_row {
    display: block;
    margin-top: 5px;
    margin-bottom: 5px;
}

.next {
    float: right;
    font-size: inherit;
    font-family: inherit;
}

.prev {
    float: none;
    font-size: inherit;
    font-family: inherit;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

/* creating a style for the author acknowledgement */
.author {
    float: right;
    color: #a0a0a0;
    font-size: smaller;
}

/* styling the footer */
footer {
    padding-top: 10px;
    padding-bottom: 20px;
    bottom: 3%;
    text-align: center;
    width: 100%;
    color: #c0c0c0;
    font-size: small;
}

/* styling the floor which contains all the links */
.floor {
    display: flex;
    border-top: 2px solid #d0d0d0;
    border-bottom: 2px solid #d0d0d0;
    padding: 7px 26px;
    overflow: hidden;
    justify-content: space-evenly;
}

/* BUTTONS */
.btn {
    border: 3px;
    border-radius: 5px;
    color: white;
    padding: 14px 26px;
    cursor: pointer;
    height: 60px;
    width: 180px;
    text-align: center;
    display: flex;
    justify-content: center;
}

.btn:disabled {
  cursor: not-allowed;
}

/* Reddit */
.reddit {
    background-color: #ff4500;
    border-color: red;
}
.reddit:hover {
    background-color: #ff9f9f;
}

.btn_img {
    object-fit: scale-down;
    max-height: 100%;
    max-width: 100%;
}

/* Buy Me A Coffee */
.btn.coffee {
    background-color: yellow;
    color: black;
}
.btn.coffee:hover {
    background-color: rgb(255, 255, 147);
}

.btn.insta {
    background-image: linear-gradient(to bottom, pink, rgb(255, 179, 65));
}
.insta:hover {
    background-image: linear-gradient(to bottom, rgb(255, 223, 228), rgb(255, 235, 192));
}

/* Construction */
.construct {
    background-color: #909090;
    color: #333
}

.desc {
    margin-left: 0;
}

/* Img scaling */
img.finale {
    max-width: 100%;
    height: auto;
}

img.progress {
    width: 100%;
    height: auto;
}

figure {
    margin: 0;
    border: 0;
    padding: 4px;
}

.prog_container {
    display: flex;
    justify-content: space-evenly;
}

img.square {
    height: 250px;
    object-position: center;
}

img.square:hover {
    transform: scale(1.1);
    transition: transform 0.5s ease;
}

img.clicked {
  max-width: 100%;
  max-height: 100%;
  display: inline;
  float: none;
}

.logo {
    width: 80px;
    object-fit: cover;
}

.logo:hover {
    transform: scale(1.2);
}

/* Button images for the bad drawings page */
.btn_drawings {
    width: 20%;
    max-width: 20%;
    height: 250px;
}

.translation {
    display: none;
    font-family: inherit;
    font-size: inherit;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* Top navigation bar */
.topnav {
    background-color: #EFEFEF;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.dropdown_div {
    display: block;
    position: relative;
}

.other_pages {
    display: flex;
}

/* Styling the links in the nav bar */
.topnav a, .dropdown {
  color: #333;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  cursor: pointer;
  margin: 0;
  border: none;
}

.dropdown {
    float: none;
    display: block;
    text-align: left;
}

.check {
    display: inline;
    position: relative;
    float: inline-end;
}

.dropdown_contents {
    position: absolute;
    float: none;
    display: none;
    min-width: max-content;
    background-color: #EFEFEF;
}

.dropdown_contents a {
    display: block;
    width: 100%;
    text-align: left;
    background-color: #EFEFEF;
    box-shadow: -4px 8px 16px rgba(0,0,0,0.2);
}

/* Styling the link specifically for the main page (index) button - will add img to it later */
.topnav a.main {
    display: flex;
    justify-content: center;
    color:#333;
    padding: 0px 14px;
    text-decoration: none;
    font-size: 17px;
    border-left: 0px;
    max-height: 48px;
}

#logo_text {
    display: none;
}

/* Change the color of links on hover */
.topnav a:hover, .dropdown:hover {
  background-color: #DEDEDE;
  color: black;
}

.topnav .disabled {
    background-color: #cecece;
    color: #393939;
    cursor: not-allowed;
}
.topnav .disabled:hover {
    background-color: #cecece;
    color: #393939;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon {
  display: none;
}

.pg_slct {
    font-family: inherit;
    font-size: inherit;
}

.page_form {
    display: flex;
    justify-content: center;
    text-align: center;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ACCESSIBLE MODE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
body.body.accessible {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 22px;
}

body {
    font-family: 'Times New Roman', Times, serif;
    font-size: 17px;
}

body.body.accessible .pic_note {
    font-size: 16px;
}

body.body.accessible h2.pic_note {
    font-size: 30px;
}

body.body.accessible h4.pic_note {
    font-size: 20px;
}

body.body.accessible .highlight {
    font-size: 16px;
}

body.body.accessible footer {
    font-size: 16px;
    color: #333;
}

body.body.accessible pre {
    font-size: 20px;
    font-family: inherit;
}

body.body.accessible .logo {
    display: none;
}

body.body.accessible #logo_text {
    display: block;
}

body.body.accessible .topnav a.main {
    padding: 14px 16px;
}

body.body.accessible .translation {
    display: inline;
}

body.body.accessible .author {
    color: white;
}
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ RESPONSIVE DESIGN ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

@media screen and (max-width: 900px) {

  /* hides menu by default */
  .other_pages {
    display: none;
    width: 100%;
    flex-direction: column;
  }

  /* keep index link to the right */
  .topnav.responsive a.main {
    flex: 1;
  }

  /* show hamburger icon */
  .topnav a.icon {
    display: block;
  }

  /* when responsive class is added from JS hamburgerToggle() */
  .topnav.responsive {
    display: flex;
    flex-direction: column;
    position: relative;
  }

  .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }

  /* show the menu */
  .topnav.responsive .other_pages {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  /* make each link full width */
  .topnav.responsive .other_pages a,
  .topnav.responsive .dropdown_div {
    display: block;
    max-width: 100%;
    text-align: left;
  }

  /* adjusts image sizes and positions on mobile (for DBUBOTW2) */
  #selected_img {
    position: fixed;
    width: 80%;
    height: 40%;
    top: 4%;
    bottom: 4%;
    left: 50%;
    transform: translate(-50%, 0%);
  }

  img.progress {
    max-width: 47%;
    padding-left: 1%;
    padding-right: 1%;
  }

  /* same goes for the notes */
  #notes {
    position: fixed;
    left: 50%;
    top: 45%;
    width: 80%;
    text-align: justify;
    height: 50%;
    transform: translate(-50%, 0%);
  }

  #notes_content {
    max-height: 50%;
    overflow-y: auto;
  }

  .pg_slct {
    max-width: 100%;
  }

  .btn {
    height: 40px;
    width: 120px;
    padding: 7px 10px;
  }
}

/* When screen is small enough (i.e. phone screens), reduce the number of images per column in the Bad Drawings pages */
@media screen and (max-width: 768px) {
    .btn_drawings {
        width: 25%;
        max-width: 25%;
        height: 100px;
        max-height: 100px;
    }

    img.square {
        height: 100px;
    }

    .btn {
        height: 50px;
        width: 50px;
        padding: 4px;
        justify-content: center;
    }

    .btn.gmail {
        padding-top: 9px;
    }
}

